version/0.38/_sources/api/solver/_autosummary/settings/phase_4.rst.txt
:orphan:

.. _phase_4:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.phase_4
    :show-inheritance:

.. rubric:: Methods

============================================   =====================================================

Method                                                                                       Summary

============================================   =====================================================
:ref:`create <create>`                             Create a new instance of the current object type.

:ref:`delete <delete>`                                                      Delete selected objects.

:ref:`rename <rename>`                                                            Rename the object.

:ref:`list_1 <list_1>`                                                List the names of the objects.

:ref:`list_properties_1 <list_properties_1>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                        Create a copy of the object.

============================================   =====================================================

.. rubric:: Named object type

:ref:`phase_4_child <phase_4_child>`


.. rubric:: Included in:

==========================================   =====================================

Parent                                                                     Summary

==========================================   =====================================
:ref:`axis_6_child <axis_6_child>`                    'child_object_type' of axis.

:ref:`degassing_child <degassing_child>`         'child_object_type' of degassing.

:ref:`geometry_6_child <geometry_6_child>`        'child_object_type' of geometry.

:ref:`overset_1_child <overset_1_child>`           'child_object_type' of overset.

:ref:`shadow_child <shadow_child>`                  'child_object_type' of shadow.

:ref:`symmetry_child <symmetry_child>`            'child_object_type' of symmetry.

==========================================   =====================================

